--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.port=9042
 spring.data.cassandra.schema-action=create_if_not_exists
 
-#logs property
-logging.level.com.example=INFO
-logging.level.org.springframework.web=ERROR
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-logging.file=log/logs.log
+#RabbitMQ properties
+#cassandra.rabbitmq.exchange=cassandra-rabbit.direct
+#cassandra.rabbitmq.queue=cassandra-rabbit.queue
+#cassandra.rabbitmq.routing.key=cassandra-rabbit
